--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,12 +1,5 @@
-general:
-  iflowName: flow1
-  iflowVersion: 1.0.1
-
 steps:
-  integrationArtifactDownload:
-    cpiCredentialsId: roverpocOauthCred
-    integrationFlowId: flow1
-    integrationFlowVersion: 1.0.24
-    downloadPath: ./iflows
-    host: https://roverpoc.it-accd002.cfapps.sap.hana.ondemand.com
-    oAuthTokenProviderUrl: https://roverpoc.authentication.sap.hana.ondemand.com/oauth/token
+  apiProxyDownload:
+    apimCredentialsId: myapimServiceKey
+    apiProxyName: flow1
+    downloadPath: ./proxy
